--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "parallel_executor"
+name = "png_ect"
 version = "1.0.0"
 edition = "2021"
+description = "A command-line tool for compressing png images using ECT."
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
